Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      Flatiron School
+    </title>
+  </head>
+  <body>
+    <a herf="https://flatironschool.com">Flatiron School</a>
+  </body>
+</html>
 <a herf="https://flatironschool.com">Flatiron School</a>
